# TechNews

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  mypy.ini  nginx.conf  openapi_v1.yaml  pyproject.toml
backend/: Dockerfile  Makefile  pyproject.toml  pyrightconfig.json  schema.yml  test_schemathesis.py
backend/src/: conftest.py  requests.md
backend/src/accounts/: admin.py  models.py
backend/src/app/: celery.py  settings.py
backend/src/main/: admin.py  urls.py
backend/src/payments/: apps.py  models.py  signals.py  urls.py
backend/src/subscribe/: admin.py  models.py  signals.py  tasks.py
frontend/: .eslintcache  .gitignore  Dockerfile  eslint.config.js  index.html  jsconfig.json  nginx-spa.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/services/: api.ts  auth.ts  comments.ts  payments.ts  posts.ts  subscriptions.ts  utils.ts
frontend/src/stores/: auth.ts  comments.ts  payments.ts  posts.ts  subscriptions.ts
frontend/src/types/: api.ts
frontend/src/views/: AboutView.vue  HomeView.vue  NotFoundView.vue
minio/: minio-setup.sh
nginx/: nginx.conf
src/: conftest.py  entrypoint.sh
src/accounts/: admin.py  models.py  urls.py
src/accounts/api/: views.py  (+1 more)
src/app/: celery.py  models.py  permissions.py  serializer.py  settings.py
src/comments/: admin.py  models.py  urls.py
src/main/: admin.py  models.py  permissions.py  urls.py
src/payments/: admin.py  services.py  tasks.py  urls.py
src/subscribe/: admin.py  models.py  tasks.py  urls.py
(+89 files in other folders)
